<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context="com.thermlabs.djoro.app.SigninActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textSize="20sp"
            android:hint="@string/email"
            android:textColorHint="#aaa"
            android:fontFamily="sans-serif-thin"
            />

    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/editTextPassword"
            android:hint="@string/username"
            android:textColorHint="#aaa"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#aaa"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:hint="@string/confirmPassword"
            android:textColorHint="#aaa"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"/>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signinButton"
        android:id="@+id/signinButton"
        android:textSize="20sp"
        android:fontFamily="sans-serif-thin"
        android:textColor="#fff"
        android:background="@drawable/btn_blue"
        style="@style/ButtonText"/>

</TableLayout>
