<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context="com.thermlabs.djoro.app.LoginActivity">

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#aaa"
        android:textSize="30sp"
        android:fontFamily="sans-serif">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#aaa"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        android:inputType="textPassword" />

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:paddingBottom="30sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/attempts"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:textColor="#fff"
        android:fontFamily="sans-serif"
        android:text="@string/Login"
        android:background="@drawable/btn_green"
        style="@style/ButtonText"/>

    <Button
        android:id="@+id/signinButton"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signin"
        android:textColor="#fff"
        android:fontFamily="sans-serif-thin"
        android:text="@string/signinButton"
        android:background="@drawable/btn_blue"
        style="@style/ButtonText"/>

</TableLayout>
