<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/fragment_set_away_period_header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginBottom="20sp">

        <TextView
            android:id="@+id/fragment_set_away_period_departure_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_set_away_period_default_header_title"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:paddingRight="10sp"
            />

        <TextView
            android:id="@+id/fragment_set_away_period_departure_header_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_set_away_period_default_header_information"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:paddingTop="10sp"

            />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/fragment_set_away_period_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/section_border">

        <TextView
            android:id="@+id/fragment_set_away_period_departure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_set_away_period_departure_label"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:paddingRight="10sp"
            />

        <Button
            android:id="@+id/fragment_set_away_period_departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_set_away_period_departure_label"
            android:text="@string/fragment_set_away_period_set_date_question"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textColor="@color/button_link_color"
            android:background="@android:color/transparent"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_set_away_period_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:background="@drawable/section_border">

        <TextView
            android:id="@+id/fragment_set_away_period_return_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_set_away_period_return_label"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:paddingRight="10sp"
            />

        <Button
            android:id="@+id/fragment_set_away_period_return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_set_away_period_return_label"
            android:text="@string/fragment_set_away_period_set_date_question"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textColor="@color/button_link_color"
            android:background="@android:color/transparent"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_set_away_period_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20sp">

        <info.hoang8f.widget.FButton
            android:id="@+id/fragment_set_away_period_button_validate"
            fbutton:buttonColor="@color/button_color_green"
            fbutton:shadowColor="@color/button_color_green_shadow"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="3dp"
            fbutton:cornerRadius="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/ValidateButton"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_marginBottom="10sp"
            android:layout_marginRight="20sp"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/fragment_set_away_period_button_cancel"
            fbutton:buttonColor="@color/button_color_red"
            fbutton:shadowColor="@color/button_color_red_shadow"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="3dp"
            fbutton:cornerRadius="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/CancelButton"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="20sp"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:layout_toRightOf="@id/fragment_set_away_period_button_validate"/>
    </RelativeLayout>

</LinearLayout>